<resources>
    <string name="app_name">Clerk app</string>
    <string name="enter">Вход</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="to_enter">Войти</string>
    <string name="did_not_register">Еще не зарегистрированы или забыли пароль?  Обратитесь к Администратору</string>
    <string name="remove_user">Удаление пользователя</string>
    <string name="change_user_password">Смена пароля пользователя</string>
    <string name="change_password">Смена пароля</string>
    <string name="user_registration">Регистрация пользователя</string>
    <string name="ready_button">Готово</string>
    <string name="menu">Меню</string>


    <string name="name">Имя</string>
    <string name="lastName">Фамилия</string>
    <string name="email">Эл. почта</string>
    <string name="rank">Должность</string>
    <string name="patronymic">Отчество</string>
    <string name="gender">Пол:</string>
    <string name="male">Мужчина</string>
    <string name="female">Женщина</string>
    <string name="birthday">Дата рождения</string>
    <string name="phone">Телефон</string>
    <string name="back_arrow">Back arrow</string>
    <string name="old_password">Старый пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="change_password_hint">Введите Эл. почту и на нее придёт сообщение для восстановления пароля.</string>
    <string name="confirm_password">Подтверждение пароля</string>

    <string name="profilePhone">Телефон:</string>
    <string name="profileEmail">Эл. почта:</string>

    <string name="profileFullUserName">%1$s %2$s %3$s</string>
    <string name="dialogFullUserName">%1$s %2$s</string>

    <string name="chat">Чат</string>
    <string name="tasks">Задачи</string>
    <string name="dialogs">Диалоги</string>
    <string name="task">Задача</string>
    <string name="new_task">Новая задача</string>
    <string name="profile">Профиль</string>
    <string name="close">Close</string>
    <string name="title_input">Тема/заголовок</string>
    <string name="deadLine">Срок выполнения</string>
    <string name="performers_list">Список исполнителей</string>
    <string name="description">Описание</string>
    <string name="performer">Исполнитель</string>
    <string name="in_developing">Ещё в разработке.</string>
    <string name="send_to_check">Отправить на проверку</string>

    <string name="accept">Принять</string>
    <string name="reject">Отклонить</string>
    <string name="empty_query">Пустой запрос</string>
    <string name="there_are_not_items">Ничего не найдено</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="editing_profile">Редактирование профиля</string>
    <string name="enter_new_data">Введите новые данные</string>
    <string name="application_icon">Application icon</string>
    <string name="logout">Выйти</string>
    <string name="send_message_button">Отправить сообщение</string>
    <string name="write_message">Написать сообщение...</string>
    <string name="empty_message_stub">В этом чате еще нет сообщений</string>


    <string-array name="ranks">
        <item>Должность</item>
        <item>Работник</item>
        <item>Начальник</item>
    </string-array>
</resources>
