<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/registerUserButton"
        style="@style/whiteButton"
        android:layout_marginBottom="16dp"
        android:text="@string/user_registration"
        app:layout_constraintBottom_toTopOf="@id/changeUserPasswordButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/changeUserPasswordButton"
        style="@style/whiteButton"
        android:text="@string/change_user_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/removeUserButton"
        style="@style/whiteButton"
        android:text="@string/remove_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changeUserPasswordButton" />

</androidx.constraintlayout.widget.ConstraintLayout>