<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="@style/defaultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/change_password_hint"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/emailContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/emailContainer"
        style="@style/defaultInputContainer"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/emailEditText"
            style="@style/defaultInput"
            android:hint="@string/email"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Autofill,TextFields" />

        <View
            android:id="@+id/emailUnderline"
            style="@style/defaultInputBottomLine"
            app:layout_constraintEnd_toEndOf="@id/emailEditText"
            app:layout_constraintStart_toStartOf="@id/emailEditText"
            app:layout_constraintTop_toBottomOf="@id/emailEditText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/changeUserPasswordButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/orange_button_background"
        android:enabled="false"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/ready_button"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>