<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/emailContainer"
            style="@style/defaultInputContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/emailEditText"
                style="@style/defaultInput"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="Autofill,TextFields" />

            <View
                style="@style/defaultInputBottomLine"
                app:layout_constraintEnd_toEndOf="@id/emailEditText"
                app:layout_constraintStart_toStartOf="@id/emailEditText"
                app:layout_constraintTop_toBottomOf="@id/emailEditText" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/passwordContainer"
            style="@style/defaultInputContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailContainer">

            <EditText
                android:id="@+id/passwordEditText"
                style="@style/defaultInput"
                android:hint="@string/password"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="Autofill,LabelFor,TextFields" />

            <View
                style="@style/defaultInputBottomLine"
                app:layout_constraintEnd_toEndOf="@id/passwordEditText"
                app:layout_constraintStart_toStartOf="@id/passwordEditText"
                app:layout_constraintTop_toBottomOf="@id/passwordEditText" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/createButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/orangeColor"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/ready_button"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>