<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <ImageView
        android:id="@+id/loginBackgroundImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/authorization_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/enterTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_thin"
        android:gravity="center"
        android:text="@string/enter"
        android:textColor="@android:color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@id/loginBackgroundImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginConstraintLayout"
        style="@style/loginConstraintLayout"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterTextView">

        <ImageView
            android:id="@+id/loginIcon"
            style="@style/loginIcon"
            android:background="@color/strongTransparentWhiteColor"
            android:src="@drawable/login_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <EditText
            style="@style/loginEditText"
            android:background="@color/lowTransparentWhiteColor"
            android:hint="@string/login"
            android:inputType="text"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/loginIcon"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Autofill,TextFields" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/passwordConstraintLayout"
        style="@style/loginConstraintLayout"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginConstraintLayout">

        <ImageView
            android:id="@+id/passwordIcon"
            style="@style/loginIcon"
            android:background="@color/lowTransparentWhiteColor"
            android:src="@drawable/password_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <EditText
            style="@style/loginEditText"
            android:background="@color/veryLowTransparentWhiteColor"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/passwordIcon"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Autofill,TextFields" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:layout_width="240dp"
        android:layout_height="46dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/login_button_background"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/to_enter"
        android:textAllCaps="false"
        android:textColor="@color/backgroundColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordConstraintLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>