<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/taskTitle"
            style="@style/defaultText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/taskDeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/greyTextColor"
            app:layout_constraintStart_toStartOf="@id/taskTitle"
            app:layout_constraintTop_toBottomOf="@id/taskTitle" />

        <TextView
            android:id="@+id/taskStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/activeOrangeColor"
            app:layout_constraintEnd_toEndOf="@id/taskTitle"
            app:layout_constraintTop_toBottomOf="@id/taskTitle" />

        <TextView
            android:id="@+id/taskDescription"
            style="@style/defaultText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingBottom="30dp"
            app:layout_constraintEnd_toEndOf="@id/taskTitle"
            app:layout_constraintStart_toStartOf="@id/taskTitle"
            app:layout_constraintTop_toBottomOf="@id/taskStatus" />

        <Button
            android:id="@+id/sendToCheckButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="10dp"
            android:background="@color/activeOrangeColor"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/send_to_check"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent" />

        <LinearLayout
            android:id="@+id/validateTaskLayout"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="10dp"
            android:weightSum="2"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/acceptButton"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:background="@color/activeOrangeColor"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/accept"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/rejectButton"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:background="@color/rejectButtonColor"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/reject"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>